--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "@langchain/core": "^1.0.1",
+    "@langchain/google-genai": "^1.0.0",
     "@langchain/langgraph": "^1.0.0",
     "@langchain/openai": "^1.0.0",
     "@nestjs/common": "^11.0.1",
@@ -30,6 +32,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.75.1",
     "axios": "^1.12.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "openai": "^6.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
